--- a/htmlsec.html
+++ b/htmlsec.html
@@ -27,7 +27,7 @@
             <li><strong>Contact Us:</strong> Provides an email (note: misspelled as "collage.com") and phone number.</li>
             <li><strong>Extras:</strong> Link to more college images on Pixabay.</li>
         </ul>
-        <a href="C:\Users\nikam\html\col.html">Click Here</a>
+        <a href="col.html">Click Here</a>
     </section>
 
     <section id="land">
@@ -51,12 +51,12 @@
         <h3>Tools Used:</h3>
         <ul>
             <li>HTML5</li>
-            <li>CSS3 (linked as <code>land.css</code>)</li>
+            <li>CSS3 </li>
         </ul>
 
         <h3>Purpose:</h3>
         <p>To provide a simple and attractive web interface to explore shoe collections and practice frontend development skills.</p>
-        <a href="C:\Users\nikam\html\land.html">Click Here</a>
+        <a href="land.html">Click Here</a>
     </section>
 
 </body>
