--- a/land.html
+++ b/land.html
@@ -23,8 +23,8 @@
           <li><a href="https://g.co/kgs/STmVNPb">Kids' shoes</a></li>
         </ul><br>
         <img src="shoes1.jpeg" alt="Shoes">
-        <img src="shoes2.jpeg" alt="Shoes">
-        <img src="shoes3.jpeg" alt="Shoes">
+        <img src="shoes2.webp" alt="Shoes">
+        <img src="shoes3.jpg" alt="Shoes">
       </section>
   </body>
 </html>
