--- a/land.html
+++ b/land.html
@@ -3,28 +3,40 @@
   <head>
     <title>My Landing Page</title>
     <link rel="stylesheet" href="land.css">
+   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <section>
-    <header>
-      <h1>Shoes for men and women</h1>
-    </header>
-        <h2>Explore our collection of shoes</h2>
-        <h4>
-          about shoes
-        </h4>
-        <p>Men's and women's shoes are designed with different considerations in mind, primarily focusing on fit,
-             support, and style. Men's shoes often feature wider widths, thicker materials, and more durable soles to accommodate 
-             broaders feet and support heavier body weight. Women's shoes, on the other hand, tend to be narrower, lighter, 
-            and more flexible, often with extra padding in the arch for enhanced comfort.</p>
-        <ul >
-          <li><a href="https://g.co/kgs/sv4TrcY">Men's shoes</a></li>
-          <li><a href="https://g.co/kgs/psWRWCu">Women's shoes</a></li>
-          <li><a href="https://g.co/kgs/STmVNPb">Kids' shoes</a></li>
-        </ul><br>
-        <img src="shoes1.jpeg" alt="Shoes">
-        <img src="shoes2.webp" alt="Shoes">
-        <img src="shoes3.jpg" alt="Shoes">
-      </section>
+    <section class="container py-5">
+      <header class="mb-4">
+        <h1 class="text-center">Shoes for men and women</h1>
+      </header>
+      <h2 class="mb-3">Explore our collection of shoes</h2>
+      <h4>about shoes</h4>
+      <p>
+        Men's and women's shoes are designed with different considerations in mind, primarily focusing on fit,
+        support, and style. Men's shoes often feature wider widths, thicker materials, and more durable soles to accommodate 
+        broaders feet and support heavier body weight. Women's shoes, on the other hand, tend to be narrower, lighter, 
+        and more flexible, often with extra padding in the arch for enhanced comfort.
+      </p>
+      <ul class="list-group mb-4">
+        <li class="list-group-item"><a href="https://g.co/kgs/sv4TrcY">Men's shoes</a></li>
+        <li class="list-group-item"><a href="https://g.co/kgs/psWRWCu">Women's shoes</a></li>
+        <li class="list-group-item"><a href="https://g.co/kgs/STmVNPb">Kids' shoes</a></li>
+      </ul>
+      <div class="row">
+        <div class="col-md-4 mb-3">
+          <img src="shoes1.jpeg" alt="Shoes" class="img-fluid rounded">
+        </div>
+        <div class="col-md-4 mb-3">
+          <img src="shoes2.webp" alt="Shoes" class="img-fluid rounded">
+        </div>
+        <div class="col-md-4 mb-3">
+          <img src="shoes3.jpg" alt="Shoes" class="img-fluid rounded">
+        </div>
+      </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
