--- a/htmlsec.html
+++ b/htmlsec.html
@@ -3,19 +3,23 @@
 <head>
     <title>HTML Projects</title>
     <link rel="stylesheet" href="htmlsec.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<div class="container">
+    <h2>THIS IS MY HTML, CSS, JAVASCRIPT PROJECTS</h2>
 
-    <h2>THIS IS MY HTML,CSS,JAVASCRIPT PROJECTS</h2>
     <nav>
         <ul>
             <li><a href="#collage">College Website</a></li>
             <li><a href="#land">Landing Page</a></li>
+            <li><a href="#flip">Flip Card Team</a></li>
         </ul>
     </nav>
 
     <section id="collage">
-        <h2>This is College Website Project</h2>
+        <h2>College Website Project</h2>
         <ul>
             <li>This is a simple college website built using HTML. It includes the following sections:</li>
             <li><strong>Header:</strong> Displays the college name, slogan ("Excellence in Education"), and a navigation menu.</li>
@@ -27,36 +31,39 @@
             <li><strong>Contact Us:</strong> Provides an email (note: misspelled as "collage.com") and phone number.</li>
             <li><strong>Extras:</strong> Link to more college images on Pixabay.</li>
         </ul>
-        <a href="col.html">Click Here</a>
+        <a href="C:\Users\nikam\html\col.html" target="_blank">Open College Website</a>
     </section>
+
     <section id="land">
-        <h2>📝 Project Description: Shoe Landing Page</h2>
-
-        <h3>Project Title:</h3>
-        <p><strong>Shoe Landing Page for Men and Women</strong></p>
-
-        <h3>Description:</h3>
-        <p>This project is a basic landing page created using HTML and CSS to showcase a collection of shoes for men, women, and kids. It features a clean layout with a welcoming header and informative content about design differences between genders.</p>
-
-        <h3>Key Features:</h3>
+        <h2>Landing Page Project</h2>
         <ul>
-            <li>Attractive header with the title “Shoes for men and women”</li>
-            <li>Informative paragraph about shoe features and differences</li>
-            <li>Links to explore men's, women's, and kids’ shoe collections</li>
-            <li>Shoe images for visual appeal</li>
-            <li>Structured layout using semantic HTML tags</li>
+            <li>This is a basic shoe landing page created using HTML and CSS. It includes the following sections:</li>
+            <li><strong>Header:</strong> Displays the title "Shoes for men and women".</li>
+            <li><strong>Intro Message:</strong> Short paragraph about design differences between men’s and women’s shoes.</li>
+            <li><strong>Links:</strong> Redirects to Men's, Women's, and Kids' shoe pages.</li>
+            <li><strong>Images:</strong> Displays three shoe images to engage the user visually.</li>
         </ul>
-
-        <h3>Tools Used:</h3>
-        <ul>
-            <li>HTML5</li>
-            <li>CSS3 </li>
-        </ul>
-
-        <h3>Purpose:</h3>
-        <p>To provide a simple and attractive web interface to explore shoe collections and practice frontend development skills.</p>
-        <a href="land.html">Click Here</a>
+        <a href="C:\Users\nikam\html\land.html" target="_blank">Open Landing Page</a>
     </section>
 
+    <section id="flip">
+        <h2>Flip Card Contact Info Project</h2>
+        <ul>
+            <li>This is an interactive team portfolio page created using HTML and CSS. It includes the following features:</li>
+            <li><strong>Heading:</strong> Welcomes users to the development team section.</li>
+            <li><strong>Flip Cards:</strong> Each card shows a team member’s name and role on the front.</li>
+            <li><strong>Hover Effect:</strong> On hover, the card flips to reveal the contact information.</li>
+            <li><strong>Team Members:</strong>
+                <ul>
+                    <li>Aarav Sharma – Team Lead & Backend Developer</li>
+                    <li>Meera Joshi – Frontend Developer</li>
+                    <li>Rohit Verma – Mobile App Developer</li>
+                    <li>Priya Desai – UI/UX Designer & Tester</li>
+                </ul>
+            </li>
+        </ul>
+        <a href="C:\Users\nikam\html\cssproject\flip.html" target="_blank">Open Flip Card Page</a>
+    </section>
+</div>
 </body>
 </html>
