--- a/flip.html
+++ b/flip.html
@@ -16,8 +16,10 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
+          <img src="aarav.jpeg" alt="Aarav Sharma">
           <h2>Aarav Sharma </h2>
           <h3>Team Lead & Backend Developer</h3>
+  
         </div>
         <div class="flip-card-back">
           <div>
@@ -32,6 +34,7 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
+          <img src="meera.jpeg" alt="Aarav Sharma">
           <h2>Meera Joshi </h2>
           <h3>Frontend Developer</h3>
         </div>
@@ -48,6 +51,7 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
+          <img src="rohot.jpeg" alt="Aarav Sharma">
           <h2>Rohit Verma</h2>
           <h3>Mobile App Developer</h3>
         </div>
@@ -64,6 +68,7 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
+          <img src="C:\Users\nikam\html\shin.jpg" alt="Aarav Sharma">
           <h2>Priya Desai</h2>
           <h3> UI/UX Designer & Tester</h3>
         </div>
