--- a/flip.html
+++ b/flip.html
@@ -34,7 +34,7 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="meera.jpeg" alt="Aarav Sharma">
+          <img src="meera.jpeg" alt="meera joshi">
           <h2>Meera Joshi </h2>
           <h3>Frontend Developer</h3>
         </div>
@@ -51,7 +51,7 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="rohot.jpeg" alt="Aarav Sharma">
+          <img src="rohot.jpeg" alt="Rohit Verma">
           <h2>Rohit Verma</h2>
           <h3>Mobile App Developer</h3>
         </div>
@@ -68,7 +68,7 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="C:\Users\nikam\html\shin.jpg" alt="Aarav Sharma">
+          <img src="priya.jpeg" alt="priya desai">
           <h2>Priya Desai</h2>
           <h3> UI/UX Designer & Tester</h3>
         </div>
