--- a/htmlsec.html
+++ b/htmlsec.html
@@ -31,7 +31,7 @@
             <li><strong>Contact Us:</strong> Provides an email (note: misspelled as "collage.com") and phone number.</li>
             <li><strong>Extras:</strong> Link to more college images on Pixabay.</li>
         </ul>
-        <a href="col.html" target="_blank">Open College Website</a>
+        <a href="C:\Users\nikam\html\col.html" target="_blank">Open College Website</a>
     </section>
 
     <section id="land">
@@ -43,7 +43,7 @@
             <li><strong>Links:</strong> Redirects to Men's, Women's, and Kids' shoe pages.</li>
             <li><strong>Images:</strong> Displays three shoe images to engage the user visually.</li>
         </ul>
-        <a href="land.html" target="_blank">Open Landing Page</a>
+        <a href="C:\Users\nikam\html\land.html" target="_blank">Open Landing Page</a>
     </section>
 
     <section id="flip">
@@ -62,7 +62,7 @@
                 </ul>
             </li>
         </ul>
-        <a href="flip.html" target="_blank">Open Flip Card Page</a>
+        <a href="C:\Users\nikam\html\cssproject\flip.html" target="_blank">Open Flip Card Page</a>
     </section>
 </div>
 </body>
