--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
             <p>GitHub: <a href="https://github.com/saeenikam19" target="_blank">github.com/saeenikam19</a></p>
         </section>
     </div>
+    <footer>
+        <p>&copy; 2025 Saee Nikam. All rights reserved.</p>
+    </footer>
 </body>
 </html>
