--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
             <p>GitHub: <a href="https://github.com/saeenikam19" target="_blank">github.com/saeenikam19</a></p>
         </section>
     </div>
-    <footer>
-        <p>&copy; 2025 Saee Nikam. All rights reserved.</p>
-    </footer>
+<footer>
+  <p>© 2025 Saee Nikam | <a href="mailto:saeenikam19@gmail.com">saeenikam19@gmail.com</a></p>
+  <p>
+    <a href="https://github.com/saeenikam19" target="_blank">GitHub</a> |
+    <a href="https://linkedin.com/in/your-link" target="_blank">LinkedIn</a>
+  </p>
+</footer>
 </body>
 </html>
