--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="skills">
         <ul>
             <h2>SKILLS</h2>
-            <li>Languages: C, C++, Java, Python</li>
+            <li>Languages: C, C++, Java, Python,Android Application Development</li>
             <li>Web: HTML, CSS, JavaScript</li>
             <li>Tools: GitHub, VS Code</li>
             <li>Cybersecurity: Learning OWASP, TryHackMe (beginner)</li>
@@ -55,7 +55,7 @@
         <section id="contact">
             <h2>CONTACT INFO</h2>
             <p>Email: saeenikam19@gmail.com</p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/saeenikam19" target="_blank">linkedin.com/in/saeenikam19</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/saee-nikam-96bb5821b/" target="_blank">linkedin.com/in/Saee Nikam</a></p>
             <p>GitHub: <a href="https://github.com/saeenikam19" target="_blank">github.com/saeenikam19</a></p>
         </section>
     </div>
@@ -63,7 +63,7 @@
   <p>© 2025 Saee Nikam | <a href="mailto:saeenikam19@gmail.com">saeenikam19@gmail.com</a></p>
   <p>
     <a href="https://github.com/saeenikam19" target="_blank">GitHub</a> |
-    <a href="https://linkedin.com/in/your-link" target="_blank">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/saee-nikam-96bb5821b/" target="_blank">LinkedIn</a>
   </p>
 </footer>
 </body>
