--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
     <div class="container">
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p class="subtitle">Web Developer | Designer </p>
+       <h1 style="color:#007BFF; font-weight:bold;">Hi, I'm Saee — Welcome to My Portfolio</h1>
+<p style="font-size:18px; color:#555;">
+Aspiring Full Stack Developer | Building dynamic and responsive web applications
+</p>
+
     </header>
 
        
