--- a/htmlsec.html
+++ b/htmlsec.html
@@ -64,8 +64,14 @@
         </ul>
         <a href="flip.html">Open Flip Card Page</a>
     </section>
+    <section>
+        <h1>
+            Collage voting system 
+        </h1>
+    </section>
 </div>
 </body>
 </html>
+
 
 
