--- a/htmlsec.html
+++ b/htmlsec.html
@@ -9,7 +9,6 @@
 <body>
 <div class="container">
     <h2>THIS IS MY HTML, CSS, JAVASCRIPT PROJECTS</h2>
-
     <nav>
         <ul>
             <li><a href="#collage">College Website</a></li>
@@ -64,14 +63,55 @@
         </ul>
         <a href="flip.html">Open Flip Card Page</a>
     </section>
-    <section>
-        <h1>
-            Collage voting system 
-        </h1>
-    </section>
+<section id="college-voting-system" class="project-section">
+  <h2>College Online Voting System</h2>
+
+  <p>
+    <strong>Description:</strong><br>
+    A secure web-based voting system developed for college elections such as
+    CR/GR or council elections. The system allows authenticated students to
+    cast their votes online while ensuring transparency, security, and
+    prevention of duplicate voting.
+  </p>
+
+  <h3>Key Features</h3>
+  <ul>
+    <li>Secure student login using college credentials</li>
+    <li>Role-based access for Admin and Students</li>
+    <li>One-student-one-vote validation</li>
+    <li>Candidate nomination and approval</li>
+    <li>Real-time vote counting and result display</li>
+    <li>Election control (start/end) by admin</li>
+  </ul>
+
+  <h3>Tech Stack</h3>
+  <ul>
+    <li><strong>Frontend:</strong> HTML, CSS, JavaScript, Bootstrap</li>
+    <li><strong>Backend:</strong> Python (Flask/Django) / Java / PHP</li>
+    <li><strong>Database:</strong> MySQL</li>
+    <li><strong>Tools:</strong> VS Code, Git</li>
+  </ul>
+
+  <h3>What I Learned</h3>
+  <ul>
+    <li>User authentication and authorization</li>
+    <li>Database design and relationships</li>
+    <li>Backend logic and CRUD operations</li>
+    <li>Building real-world problem-solving applications</li>
+  </ul>
+
+  <h3>Outcome</h3>
+  <p>
+    The project successfully demonstrated a transparent and efficient
+    digital voting process, reducing manual effort and ensuring fair elections
+    within the college environment.
+  </p>
+</section>
+
 </div>
 </body>
 </html>
+
 
 
 
